--- a/iWork.Web.UI/iView/kitchensink/kitchensink.html
+++ b/iWork.Web.UI/iView/kitchensink/kitchensink.html
@@ -17,7 +17,7 @@
                 iv-target="2"></button>
         <button iv-type="iconic"
                 iv-icon="upload"
-                iv-label="File Uploader"
+                iv-label="Form"
                 iv-toggle="slick"
                 iv-target="3"></button>
     </sidecontent>
