--- a/iWork.Web.UI/iView/kitchensink/form-validation.html
+++ b/iWork.Web.UI/iView/kitchensink/form-validation.html
@@ -2,7 +2,7 @@
 <content>
     <form iv-type="form"
           iv-title="Validation Sink"
-          iv-name="contactForm"
+          iv-name="formValidation"
           iv-model="ivContact"
           iv-controller="Contact"
           iv-action="add">
