--- a/iWork.Web.UI/iView/Contacts/form.html
+++ b/iWork.Web.UI/iView/Contacts/form.html
@@ -4,9 +4,10 @@
           iv-name="contactForm"
           iv-model="ivContact"
           iv-controller="Contact"
+          iv-single-submit="true"
           iv-action="add">
         <fieldset>
-            <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" iv-maxlength="6" iv-minlength="2" />
+            <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" iv-maxlength="20" iv-minlength="2" />
             <input iv-type="text" iv-name="tel1" iv-label="Home" />
             <input iv-type="text" iv-name="tel2" iv-label="Mobile" iv-input-type="tel" />
             <input iv-type="text" iv-name="tel3" iv-label="Office" />
