--- a/iWork.Web.UI/iView/Contacts/form.html
+++ b/iWork.Web.UI/iView/Contacts/form.html
@@ -5,7 +5,7 @@
           iv-model="ivContact"
           iv-controller="Contact"
           iv-single-submit="true"
-          iv-action="add">
+          iv-action="update">
         <fieldset>
             <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" iv-maxlength="20" iv-minlength="2" />
             <input iv-type="text" iv-name="tel1" iv-label="Home" />
