Removing old AccountController

--- a/iWork.Web.UI/iView/login/login.html
+++ b/iWork.Web.UI/iView/login/login.html
@@ -26,7 +26,7 @@
         </view>
     </content>
 </layout>
-<api>
+<!--<api>
     <models>
         <model name="ivAccount">
             <property name="Username" type="string"></property>
@@ -40,4 +40,4 @@
             </actions>
         </controller>
     </controllers>
-</api>
+</api>-->
