--- a/iWork.Web.UI/iView/kitchensink/route.html
+++ b/iWork.Web.UI/iView/kitchensink/route.html
@@ -4,6 +4,26 @@
         <a href="#/contact/grid">grid</a>
     </sidecontent>
     <content>
-       
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <br/>
+        <br />
+        <br />
+        <br />
+        <h1></h1>
+        <a class="btn btn-large btn-danger" data-toggle="confirmation" data-original-title="" title="">Click to toggle confirmation</a>
+        <script>
+            !function ($) {
+
+                $(function () {
+
+                    $('[data-toggle="confirmation"]').confirmation();
+                  
+
+                })
+
+            }(window.jQuery)
+        </script>
     </content>
 </layout>
