Implement 'Satellizer' authentication
That can be check in this url
http://iwork.io/iView/login/login.html
More Information in
https://github.com/sahat/satellizer

--- a/iWork.Web.UI/iView/login/login.html
+++ b/iWork.Web.UI/iView/login/login.html
@@ -1,5 +1,5 @@
 ﻿<layout iv-source="login.html">
-    <content>
+    <!--<content>
         <view iv-type="row">
             <view iv-type="column" iv-size="6">
                 <view iv-type="spacer" iv-height="100px"></view>
@@ -24,20 +24,5 @@
                 </panel>
             </view>
         </view>
-    </content>
+    </content>-->
 </layout>
-<!--<api>
-    <models>
-        <model name="ivAccount">
-            <property name="Username" type="string"></property>
-            <property name="Password" type="string"></property>
-        </model>
-    </models>
-    <controllers>
-        <controller name="Account">
-            <actions>
-                <action name="Authenticate" requestmodel="ivAccount" responsemodel="ResponseModel" allowroles="*" denyroles="?"></action>
-            </actions>
-        </controller>
-    </controllers>
-</api>-->
