--- a/iWork.Web.UI/iView/Contacts/form.html
+++ b/iWork.Web.UI/iView/Contacts/form.html
@@ -15,9 +15,12 @@
             <input iv-type="text" iv-name="company" iv-label="Company" />
             <input iv-type="text" iv-name="unit" iv-label="Unit" />
             <input iv-type="text" iv-name="description" iv-label="Description" />
-            <button iv-type="submit" iv-name="submit" iv-label="Submit" />
-            <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
-            <button iv-type="done" iv-name="done" iv-label="Done" />
-        </fieldset>
+            <view iv-type="column" iv-size="2"></view>
+            <view iv-type="column" iv-size="3">
+                <button iv-type="submit" iv-name="submit" iv-label="Submit" />
+                <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
+                <button iv-type="done" iv-name="done" iv-label="Done" />
+            </view>
+</fieldset>
     </form>
 </control>
