--- a/iWork.Web.UI/iView/kitchensink/kitchensink.html
+++ b/iWork.Web.UI/iView/kitchensink/kitchensink.html
@@ -2,7 +2,7 @@
     <sidecontent>
 
         <button iv-type="iconic"
-                iv-icon="upload"
+                iv-icon="wand"
                 iv-label="Form"
                 iv-href="#/kitchensink/form"></button>
         <button iv-type="iconic"
@@ -10,12 +10,16 @@
                 iv-label="Observer Grid"
                 iv-href="#/kitchensink/grid-observer"></button>
         <button iv-type="iconic"
-                iv-icon="grid"
+                iv-icon="loader"
                 iv-label="Ajax Grid"
                 iv-href="#/kitchensink/grid-ajax"></button>
         <button iv-type="iconic"
-                iv-icon="upload"
+                iv-icon="puzzle"
                 iv-label="Form Validation"
                 iv-href="#/kitchensink/form-validation"></button>
+        <button iv-type="iconic"
+                iv-icon="mask"
+                iv-label="Form Mask"
+                iv-href="#/kitchensink/mask"></button>
     </sidecontent>
 </layout>
