Password control match and strength directive. Implement password-confirm control

--- a/iWork.Web.UI/iView/kitchensink/kitchensink.html
+++ b/iWork.Web.UI/iView/kitchensink/kitchensink.html
@@ -21,5 +21,10 @@
                 iv-icon="mask"
                 iv-label="Form Mask"
                 iv-href="#/kitchensink/mask"></button>
+
+        <button iv-type="iconic"
+                iv-icon="mask"
+                iv-label="Password"
+                iv-href="#/kitchensink/password"></button>
     </sidecontent>
 </layout>
