Update project file (including some html, css, js,...)

--- a/iWork.Web.UI/iView/kitchensink/kitchensink.html
+++ b/iWork.Web.UI/iView/kitchensink/kitchensink.html
@@ -23,7 +23,7 @@
                 iv-href="#/kitchensink/mask"></button>
 
         <button iv-type="iconic"
-                iv-icon="mask"
+                iv-icon="key"
                 iv-label="Password"
                 iv-href="#/kitchensink/password"></button>
     </sidecontent>
