--- a/iWork.Web.UI/iView/login/login.html
+++ b/iWork.Web.UI/iView/login/login.html
@@ -1,6 +1,6 @@
 ﻿<layout iv-source="login.html">
     <content>
-        <view iv-type="row">
+        <!--<view iv-type="row">
             <view iv-type="column" iv-size="6">
                 <view iv-type="spacer" iv-height="100px"></view>
                 <h1>iWork</h1>
@@ -23,7 +23,7 @@
                     </form>
                 </panel>
             </view>
-        </view>
+        </view>-->
     </content>
 </layout>
 <!--<api>
