--- a/iWork.Web.UI/iView/Contacts/form.html
+++ b/iWork.Web.UI/iView/Contacts/form.html
@@ -1,26 +1,28 @@
-﻿<control>
-    <form iv-type="form"
-          iv-title="Contact Form"
-          iv-name="contactForm"
-          iv-model="ivContact"
-          iv-controller="Contact"
-          iv-single-submit="true"
-          iv-action="update">
-        <fieldset>
-            <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" iv-maxlength="20" iv-minlength="2" />
-            <input iv-type="text" iv-name="tel1" iv-label="Home" />
-            <input iv-type="text" iv-name="tel2" iv-label="Mobile" iv-input-type="tel" />
-            <input iv-type="text" iv-name="tel3" iv-label="Office" />
-            <input iv-type="text" iv-name="tel4" iv-label="Fax" />
-            <input iv-type="text" iv-name="company" iv-label="Company" />
-            <input iv-type="text" iv-name="unit" iv-label="Unit" />
-            <input iv-type="text" iv-name="description" iv-label="Description" />
-            <view iv-type="column" iv-size="2"></view>
-            <view iv-type="column" iv-size="3">
-                <button iv-type="submit" iv-name="submit" iv-label="Submit" />
-                <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
-                <button iv-type="done" iv-name="done" iv-label="Done" />
-            </view>
-</fieldset>
-    </form>
-</control>
+﻿<layout iv-source="Empty.html">
+    <content>
+        <form iv-type="form"
+              iv-title="Contact Form"
+              iv-name="contactForm"
+              iv-model="ivContact"
+              iv-controller="Contact"
+              iv-single-submit="true"
+              iv-action="update">
+            <fieldset>
+                <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" iv-maxlength="20" iv-minlength="2" />
+                <input iv-type="text" iv-name="tel1" iv-label="Home" />
+                <input iv-type="text" iv-name="tel2" iv-label="Mobile" iv-input-type="tel" />
+                <input iv-type="text" iv-name="tel3" iv-label="Office" />
+                <input iv-type="text" iv-name="tel4" iv-label="Fax" />
+                <input iv-type="text" iv-name="company" iv-label="Company" />
+                <input iv-type="text" iv-name="unit" iv-label="Unit" />
+                <input iv-type="text" iv-name="description" iv-label="Description" />
+                <view iv-type="column" iv-size="2"></view>
+                <view iv-type="column" iv-size="3">
+                    <button iv-type="submit" iv-name="submit" iv-label="Submit" />
+                    <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
+                    <button iv-type="done" iv-name="done" iv-label="Done" />
+                </view>
+            </fieldset>
+        </form>
+    </content>
+</layout>
