--- a/iWork.Web.UI/iView/Contacts/list.html
+++ b/iWork.Web.UI/iView/Contacts/list.html
@@ -1,13 +1,17 @@
 ﻿<layout>
     <sidecontent>
-        <button iv-type="iconic"
+        <button iv-type="iconictest"
                 iv-icon="address-book"
                 iv-label="Add Contact"
-                iv-href="#/contact/form"
-                iv-target="0"></button>
-        <button iv-type="iconic"
+                iv-viewname="contactform"></button>
+        <button iv-type="iconictest"
                 iv-icon="add-user"
                 iv-label="Search Contact"
-                iv-href="#/contact/grid"></button>
+                iv-viewname="contactgrid"></button>
     </sidecontent>
+    <content>
+                
+        <view iv-type="contentview">
+        </view>
+    </content>
 </layout>
